Masonry Spacing Fix

--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -33,7 +33,7 @@ body {
 
 .masonry-brick {
 	
-margin-bottom: 30px !important;
+margin-bottom: 28px !important;
 
 }
 
